force-app/main/default/objects/TXPmanpower__c/TXPmanpower__c.object-meta.xml
<CustomObject>
    <label>TXP information</label>
    <nameField>
        <label>TXP manpower input information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TXP information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>