force-app/main/default/objects/TXPmanpower__c/fields/companycode__c.field-meta.xml
<CustomField>
    <fullName>companycode__c</fullName>
    <label>Company code</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>