force-app/main/default/objects/TXPmanpower__c/fields/E_Projectcode__c.field-meta.xml
<CustomField>
    <fullName>E_Projectcode__c</fullName>
    <label>Execute PM Projectcode</label>
    <length>30</length>
    <type>Text</type>
</CustomField>