force-app/main/default/objects/TXPmanpower__c/fields/E_Projectname__c.field-meta.xml
<CustomField>
    <fullName>E_Projectname__c</fullName>
    <description>It contains the project name.</description>
    <label>Execute PM Projectname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>