force-app/main/default/objects/TXPmanpower__c/fields/ExecutionPMEdDt__c.field-meta.xml
<CustomField>
    <fullName>ExecutionPMEdDt__c</fullName>
    <label>Execute PM EndDate</label>
    <type>Date</type>
</CustomField>