force-app/main/default/objects/TXPmanpower__c/fields/ExecutionPMNo__c.field-meta.xml
<CustomField>
    <fullName>ExecutionPMNo__c</fullName>
    <label>Execute PM Employee No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>