force-app/main/default/objects/TXPmanpower__c/fields/ExecutionPMPlan__c.field-meta.xml
<CustomField>
    <fullName>ExecutionPMPlan__c</fullName>
    <label>ExecutionPM Plan Y/N</label>
    <length>20</length>
    <type>Text</type>
</CustomField>