force-app/main/default/objects/TXPmanpower__c/fields/ExecutionPMStatus__c.field-meta.xml
<CustomField>
    <fullName>ExecutionPMStatus__c</fullName>
    <label>Execute PM Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>