force-app/main/default/objects/TXPmanpower__c/fields/ExecutionPMStDt__c.field-meta.xml
<CustomField>
    <fullName>ExecutionPMStDt__c</fullName>
    <label>Execute PM StartDate</label>
    <type>Date</type>
</CustomField>