force-app/main/default/objects/TXPmanpower__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>TXP_manpower_input_information</relationshipName>
    <type>Lookup</type>
</CustomField>