force-app/main/default/objects/TXPmanpower__c/fields/P_Projectcode__c.field-meta.xml
<CustomField>
    <fullName>P_Projectcode__c</fullName>
    <label>Proposal PM Projectcode</label>
    <length>30</length>
    <type>Text</type>
</CustomField>