force-app/main/default/objects/TXPmanpower__c/fields/P_Projectname__c.field-meta.xml
<CustomField>
    <fullName>P_Projectname__c</fullName>
    <description>It contains the project name</description>
    <label>Proposal PM Projectname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>