force-app/main/default/objects/TXPmanpower__c/fields/ProposalPMEdDt__c.field-meta.xml
<CustomField>
    <fullName>ProposalPMEdDt__c</fullName>
    <label>Proposal PM EndDate</label>
    <type>Date</type>
</CustomField>