force-app/main/default/objects/TXPmanpower__c/fields/ProposalPMNo__c.field-meta.xml
<CustomField>
    <fullName>ProposalPMNo__c</fullName>
    <label>Proposal PM Employee No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>