force-app/main/default/objects/TXPmanpower__c/fields/ProposalPMPlan__c.field-meta.xml
<CustomField>
    <fullName>ProposalPMPlan__c</fullName>
    <label>ProposalPM Plan Y/N</label>
    <length>20</length>
    <type>Text</type>
</CustomField>