force-app/main/default/objects/TXPmanpower__c/fields/ProposalPMStatus__c.field-meta.xml
<CustomField>
    <fullName>ProposalPMStatus__c</fullName>
    <label>Proposal PM Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>