force-app/main/default/objects/TXPmanpower__c/fields/ProposalPMStDt__c.field-meta.xml
<CustomField>
    <fullName>ProposalPMStDt__c</fullName>
    <label>Proposal PM StartDate</label>
    <type>Date</type>
</CustomField>